Removed some boilerplate

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -22,9 +22,8 @@
   <main role="main">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-normal">
-        <a href="{% url 'home' %}">Base</a>
+        <a href="{% url 'home' %}">Team.Bio</a>
       </h5>
-      <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
       <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
