--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,11 +1,8 @@
 {% extends '_base.html' %}
 {% load static %}
 
-{% block title %}Home page{% endblock title %}
+{% block title %}Home{% endblock title %}
 
 {% block content %}
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <img src="{% static 'images/logo.png' %}" class="img-fluid" alt="Logo"/>
-  <p class="lead">Base</p>
-</div>
+
 {% endblock content %}
