Working on base page

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -55,8 +55,8 @@
   </div>
 
   <footer class="footer">
-    <div class="container">
-      <span class="text-muted">Footer...</span>
+    <div class="container text-center">
+        <small class="text-muted">Proudly built in the open <a href="https://github.com/aaronspindler/Team.Bio"><img class="img-fluid" src="{% static 'images/github-logo.png' %}"></a></small>
     </div>
   </footer>
 
