--- a/templates/_base.html
+++ b/templates/_base.html
@@ -22,7 +22,7 @@
   <main role="main">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-normal">
-        <a href="{% url 'home' %}">Team.Bio</a>
+        <a href="{% url 'home' %}"><img class="rounded" src="{% static 'images/logo.png' %}" height=40 width=140></a>
       </h5>
       <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
