--- a/templates/_base.html
+++ b/templates/_base.html
@@ -73,6 +73,8 @@
   <script src="{% static 'js/base.js' %}"></script>
 
   {% endblock javascript %}
-
+<!-- 100% privacy friendly analytics -->
+<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 </html>
