--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <title>{% block title %}Team.bio{% endblock title %}</title>
+    <title>TeamBio - {% block title %}{% endblock title %}</title>
     <meta name="description" content="A framework for launching new Django projects quickly.">
     <meta name="author" content="">
     {#<link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">#}
