Updated home page

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -4,5 +4,18 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
+    <div class="container">
+    <div class="row">
+            <div class="col-md-12">
+                <h1>We are currently under construction!</h1>
+                <h2>Sign up now to access features while we are building out the app.</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p>Soon you will be able to get to know your team better than ever!</p>
+            </div>
+        </div>
+    </div>
 
 {% endblock content %}
