--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,38 +23,48 @@
 <body>
 <main role="main">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal">
-            <a href="{% url 'home' %}"><img class="rounded" src="{% static 'images/logo.png' %}" height=40
-                                            width=140></a>
-        </h5>
-        <nav class="my-2 my-md-0 mr-md-3">
-            {% if user.is_authenticated %}
-                <ul class="navbar-nav ml-auto">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white  border-bottom shadow-sm">
+            <a class="navbar-brand" href="{% url 'home' %}"><h2><img src="{% static 'images/logo.png' %}" height=40
+                                                                     width=140></h2></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown"
-                           aria-haspopup="true" aria-expanded="false">
-                            {{ user.email }}
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                            <a class="dropdown-item" href="{% url 'account_change_password' %}">Change password</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'account_logout' %}">Log out</a>
-                        </div>
+                        <a class="nav-link p-2 text-dark" href="{% url 'company_home' %}">Company Home</a>
                     </li>
+
+                    {% if user.is_superuser %}
+                        <li class="nav-item">
+                            <a class="nav-link p-2 text-danger" href="/admin">Admin</a>
+                        </li>
+                    {% endif %}
+
+                    {% if user.is_authenticated %}
+
+                    {% endif %}
                 </ul>
-            {% else %}
-                <form class="form-inline ml-auto">
-                    <a href="{% url 'account_login' %}" class="btn btn-outline-secondary">Log in</a>
-                    <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">Sign up</a>
-                </form>
-            {% endif %}
+                {% if user.is_authenticated == False %}
+                    <a class="btn btn-outline-primary mx-2" href="{% url 'account_login' %}">Log In <span
+                            class="oi oi-account-login"></span></a>
+                    <a class="btn btn-outline-primary mx-2" href="{% url 'account_signup' %}">Sign up</a>
+                {% else %}
+                    <small>Logged in as : {{ user }} <a
+                            href="{% url 'account_logout' %}">Logout</a></small>
+                {% endif %}
+            </div>
         </nav>
+        <br>
     </div>
 </main>
 
-<div class="container">
+<div class="container-fluid">
+    <br>
     {% block content %}
-        <p>Default content...</p>
+
     {% endblock content %}
 </div>
 
