--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <title>TeamBio - {% block title %}{% endblock title %}</title>
-    <meta name="description" content="A framework for launching new Django projects quickly.">
+    <meta name="description" content="A resource to learn more about your team">
     <meta name="author" content="">
     {#<link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">#}
 
@@ -61,7 +61,7 @@
     </div>
 </main>
 
-<div class="container-fluid">
+<div class="container">
     <br>
     {% block content %}
 
