--- a/templates/_base.html
+++ b/templates/_base.html
@@ -34,8 +34,13 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link p-2 text-dark" href="{% url 'company_home' %}">Company Home</a>
+                        <a class="nav-link p-2 text-dark" href="{% url 'company_home' %}">Home</a>
                     </li>
+                    {% if user.company == user.companies.first.company %}
+                        <li class="nav-item">
+                            <a class="nav-link p-2 text-dark" href="/admin">Company Admin</a>
+                        </li>
+                    {% endif %}
 
                     {% if user.is_superuser %}
                         <li class="nav-item">
