Added some more functions and tests for them

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -43,7 +43,7 @@
                         <li class="nav-item">
                             <a class="nav-link p-2 text-dark" href="{% url 'company_home' %}">Home</a>
                         </li>
-                        {% if user.company == user.companies.first.company %}
+                        {% if user in user.company.get_owners %}
                         <li class="nav-item">
                             <a class="nav-link p-2 text-dark" href="/admin">Company Admin</a>
                         </li>
