--- a/templates/companies/home.html
+++ b/templates/companies/home.html
@@ -7,7 +7,7 @@
     <div class="container">
     <div class="row">
             <div class="col-md-12">
-                <h1>{{ user.company.name }} | Home</h1>
+                <h1>{{ user.company.name }}</h1>
             </div>
         </div>
         <div class="row">
