--- a/templates/companies/remove_user.html
+++ b/templates/companies/remove_user.html
@@ -8,12 +8,17 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Are you sure you want to remove {{ user_to_remove.name }}?</h1>
+                <h1>Removing {{ user_to_remove.name }} from {{ user.company }}</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                
+                <p>Are you sure you want to remove {{ user_to_remove.name }}({{ user_to_remove.email }}) from {{ user.company }}?</p>
+                <form method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">I Am Sure</button>
+                    <a href="{% url 'company_settings' %}" class="btn btn-primary">Go Back</a>
+                </form>
             </div>
         </div>
     </div>
