--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -38,7 +38,7 @@
                 <div class="card">
                     <h5 class="card-header d-flex justify-content-between align-items-center">
                         Users
-                        <a href="#" class="btn btn-sm btn-primary"><img src="{% static 'icons/plus-light.svg' %}"></a>
+                        <a href="{% url 'invite_user' %}" class="btn btn-sm btn-primary"><img src="{% static 'icons/plus-light.svg' %}"></a>
                     </h5>
                     <div class="card-body">
                         <table class="table">
