--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,6 @@
 {% extends '_base.html' %}
+{% load static %}
+{% load socialaccount %}
 {% load crispy_forms_tags %}
 
 {% block title %}Log in{% endblock %}
@@ -9,6 +11,8 @@
         {% csrf_token %}
         {{ form|crispy }}
         <button class="btn btn-primary" type="submit">Log in</button>
+        or
+        <a href="{% provider_login_url 'google' %}" class="btn btn-primary"><img width=20 src="{% static 'images/google-logo.png' %}"/> Continue with Google</a>
     </form>
     <a href="{% url 'account_reset_password' %}">Forgot Password?</a>
 {% endblock content %}
