--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -7,8 +7,7 @@
 
 
 {% block content %}
-    <h1>{% trans "Confirm your E-mail" %}</h1>
-
+    <h1>{% trans "Email Confirmation Expired/Invalid" %}</h1>
     {% if confirmation %}
         {% user_display confirmation.email_address.user as user_display %}
         <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that
@@ -18,10 +17,8 @@
             {% csrf_token %}
             <button class="btn btn-primary" type="submit">{% trans 'Confirm' %}</button>
         </form>
-
     {% else %}
         {% url 'account_email' as email_url %}
-        <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please
-            <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+        <p>This e-mail confirmation link expired or is invalid.</p>
     {% endif %}
 {% endblock %}
