--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Verify Your E-mail" %}{% endblock %}
+{% block title %}{% trans "Verify Your E-mail" %}{% endblock %}
 
 {% block content %}
     <h1>{% trans "Verify Your E-mail" %}</h1>
