--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,3 +32,8 @@ body {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+.img-max {
+    max-width: 400px;
+    width: 100%;
+}
