--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -48,7 +48,7 @@
                             <tbody>
                             {% for company_user in company_users %}
                                 <tr>
-                                    <th scope="row">{{ company_user.name }}</th>
+                                    <th scope="row"><a href="{% url 'user_profile' company_user.email_prefix %}">{{ company_user.name }}</a></th>
                                     <td>{{ company_user.email }}</td>
                                     <td>
                                         <a href="{% url 'remove_user' company_user.email_prefix %}" class="btn btn-sm btn-danger"><img src="{% static 'icons/trash-light.svg' %}"></a>
