Added users to company home

--- a/templates/companies/user_profile.html
+++ b/templates/companies/user_profile.html
@@ -12,7 +12,7 @@
                     <div class="card-header">
                         <h1>{{ profile.name }}</h1>
                         <h4>{{ profile.title }}</h4>
-                        <img class="card-img-top img-max mx-auto d-block rounded" src="{{ profile.profile_picture_url }}"/>
+                        <img class="card-img-top img-max d-block rounded" src="{{ profile.profile_picture_url }}"/>
                     </div>
                     <div class="card-body">
                     </div>
