--- a/templates/companies/home.html
+++ b/templates/companies/home.html
@@ -5,15 +5,31 @@
 
 {% block content %}
     <div class="container">
-    <div class="row">
+        <div class="row">
             <div class="col-md-12">
                 <h1>{{ user.company.name }}</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-
-            </div>
+            {% for company_user in user.company.get_active_users %}
+                <div class="col-md-4">
+                    <a href="{% url 'user_profile' company_user.email_prefix %}">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="d-flex justify-content-between align-items-center">
+                                    {{ company_user.name }}
+                                </h5>
+                                <small>{{ company_user.title }}</small>
+                            </div>
+                            <div class="card-body">
+                                <img class="card-img-top img-max d-block rounded"
+                                     src="{{ company_user.profile_picture_url }}"
+                                />
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            {% endfor %}
         </div>
     </div>
 
