--- a/templates/_base.html
+++ b/templates/_base.html
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link p-2 text-dark" href="{% url 'company_home' %}">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link p-2 text-dark" href="{% url 'user_profile' user.email_prefix %}">My Profile</a>
+                        </li>
                         {% if user in user.company.get_owners %}
                             <li class="nav-item">
                                 <a class="nav-link p-2 text-dark" href="{% url 'company_settings' %}">Company Settings</a>
