--- a/templates/_base.html
+++ b/templates/_base.html
@@ -33,21 +33,23 @@
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav mr-auto">
-                    {% if user.is_superuser %}
-                        <li class="nav-item">
-                            <a class="nav-link p-2 text-danger" href="/admin">Admin</a>
-                        </li>
-                    {% endif %}
-
                     {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link p-2 text-dark" href="{% url 'company_home' %}">Home</a>
                         </li>
-                        {% if user in user.company.get_owners %}
                         <li class="nav-item">
-                            <a class="nav-link p-2 text-dark" href="{% url 'company_settings' %}">Company Settings</a>
+                            <a class="nav-link p-2 text-dark" href="{% url 'user_profile' user.email_prefix %}">My Profile</a>
                         </li>
+                        {% if user in user.company.get_owners %}
+                            <li class="nav-item">
+                                <a class="nav-link p-2 text-dark" href="{% url 'company_settings' %}">Company Settings</a>
+                            </li>
+                        {% endif %}
                     {% endif %}
+                    {% if user.is_superuser %}
+                        <li class="nav-item">
+                            <a class="nav-link p-2 text-danger" href="/admin">Admin</a>
+                        </li>
                     {% endif %}
                 </ul>
                 {% if user.is_authenticated == False %}
@@ -55,7 +57,7 @@
                             class="oi oi-account-login"></span></a>
                     <a class="btn btn-outline-primary mx-2" href="{% url 'account_signup' %}">Sign Up</a>
                 {% else %}
-                    <small>Logged in as : {{ user }} <a
+                    <small>Logged in as : {{ user.name }} <a
                             href="{% url 'account_logout' %}">Logout</a></small>
                 {% endif %}
             </div>
