--- a/templates/companies/user_profile.html
+++ b/templates/companies/user_profile.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="card-body">
                         {% if company_user.short_bio %}
-                            <p>{{ company_user.short_bio }}</p>
+                            <p>{{ company_user.short_bio | linebreaks }}</p>
                         {% endif %}
                     </div>
                 </div>
