--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,6 +16,8 @@
               integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
               crossorigin="anonymous">
 
+        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 </head>
@@ -24,7 +26,7 @@
 <main role="main">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white  border-bottom shadow-sm">
-            <a class="navbar-brand" href="{% url 'home' %}"><h2><img src="{% static 'images/logo.png' %}" height=40
+            <a class="navbar-brand" href="{% url 'home' %}"><h2><img class="rounded" src="{% static 'images/logo.png' %}" height=40
                                                                      width=140></h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,8 +77,7 @@
 
 <footer class="footer">
     <div class="container text-center">
-        <small class="text-muted">Proudly built in the open <a href="https://github.com/aaronspindler/Team.Bio"><img
-                class="img-fluid" src="{% static 'images/github-logo.png' %}"></a></small>
+        <small class="text-muted">Proudly built in the open on <a href="https://github.com/aaronspindler/Team.Bio">Github</a></small>
     </div>
 </footer>
 
