Changed social button

--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -18,7 +18,6 @@
 
     <form method="post">
         {% csrf_token %}
-        <button class="btn btn-primary" type="submit">{% trans "Continue" %}</button>
-        <a class="btn btn-danger" href="{% url 'account_login' %}">Back</a>
+        <button type="button" type="submit" class="inline-flex items-center rounded-md border border-transparent bg-indigo-600 px-3 py-2 text-sm font-medium leading-4 text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Continue</button>
     </form>
 {% endblock %}
