--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -51,12 +51,15 @@
 
                     <div class="mt-6 grid grid-cols-1 gap-3">
                         <div>
-                            <a href="{% provider_login_url 'google' %}"
-                               class="inline-flex w-full justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-500 shadow-sm hover:bg-gray-50">
-                                <span class="sr-only">Sign up with Google</span>
-                                <img width=20
-                                                                                 src="{% static 'images/google-logo.png' %}"/>
-                            </a>
+                            <form action="{% provider_login_url 'google' %}" method="post">
+                                {% csrf_token %}
+                                <button type="submit"
+                                        class="inline-flex w-full justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-500 shadow-sm hover:bg-gray-50">
+                                    <span class="sr-only">Sign in with Google</span>
+                                    <img width=20
+                                         src="{% static 'images/google-logo.png' %}"/>
+                                </button>
+                            </form>
                         </div>
                     </div>
                 </div>
