--- a/templates/_base.html
+++ b/templates/_base.html
@@ -80,31 +80,15 @@
 
 <footer class="bg-white">
   <div class="mx-auto max-w-7xl overflow-hidden py-12 px-4 sm:px-6 lg:px-8">
-{#    <nav class="-mx-5 -my-2 flex flex-wrap justify-center" aria-label="Footer">#}
-{#      <div class="px-5 py-2">#}
-{#        <a href="#" class="text-base text-gray-500 hover:text-gray-900">About</a>#}
-{#      </div>#}
-{##}
-{#      <div class="px-5 py-2">#}
-{#        <a href="#" class="text-base text-gray-500 hover:text-gray-900">Blog</a>#}
-{#      </div>#}
-{##}
-{#      <div class="px-5 py-2">#}
-{#        <a href="#" class="text-base text-gray-500 hover:text-gray-900">Jobs</a>#}
-{#      </div>#}
-{##}
-{#      <div class="px-5 py-2">#}
-{#        <a href="#" class="text-base text-gray-500 hover:text-gray-900">Press</a>#}
-{#      </div>#}
-{##}
-{#      <div class="px-5 py-2">#}
-{#        <a href="#" class="text-base text-gray-500 hover:text-gray-900">Accessibility</a>#}
-{#      </div>#}
-{##}
-{#      <div class="px-5 py-2">#}
-{#        <a href="#" class="text-base text-gray-500 hover:text-gray-900">Partners</a>#}
-{#      </div>#}
-{#    </nav>#}
+    <nav class="-mx-5 -my-2 flex flex-wrap justify-center" aria-label="Footer">
+      <div class="px-5 py-2">
+        <a href="{% url 'privacy_policy' %}" class="text-base text-gray-500 hover:text-gray-900">Privacy Policy</a>
+      </div>
+
+      <div class="px-5 py-2">
+        <a href="{% url 'terms_of_service' %}" class="text-base text-gray-500 hover:text-gray-900">Terms of Service</a>
+      </div>
+    </nav>
     <div class="mt-8 flex justify-center space-x-6">
 {#      <a href="#" class="text-gray-400 hover:text-gray-500">#}
 {#        <span class="sr-only">Facebook</span>#}
