--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,6 +16,8 @@
               integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
               crossorigin="anonymous">
 
+
+        <!-- Tailwinds CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
