--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,5 +1,4 @@
 {% extends '_base.html' %}
-{% load crispy_forms_tags %}
 
 {% block title %}Change Password{% endblock title %}
 
@@ -13,7 +12,7 @@
         {% if form %}
             <form method="POST" action=".">
                 {% csrf_token %}
-                {{ form|crispy }}
+                {{ form }}
                 <button class="btn btn-primary" type="submit">Change Password</button>
             </form>
         {% else %}
