--- a/templates/_base.html
+++ b/templates/_base.html
@@ -18,7 +18,7 @@
 
 
         <!-- Tailwinds CSS -->
-        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+        <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
