--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,5 +1,4 @@
 {% extends '_base.html' %}
-{% load crispy_forms_tags %}
 
 {% block title %}Change Password{% endblock %}
 
@@ -7,7 +6,7 @@
     <h2>Change Password</h2>
     <form method="post" action="{% url 'account_change_password' %}">
         {% csrf_token %}
-        {{ form|crispy }}
+        {{ form }}
         <button class="btn btn-primary" type="submit">Change Password</button>
     </form>
 {% endblock content %}
