--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,5 +1,4 @@
 {% extends '_base.html' %}
-{% load crispy_forms_tags %}
 
 {% block title %}Password Reset{% endblock %}
 
@@ -7,7 +6,7 @@
     <h2>Forgot your password? </h2>
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form | crispy }}
+        {{ form }}
         <button class="btn btn-primary" type="submit">Reset Password</button>
     </form>
 {% endblock content %}
