--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,12 +1,11 @@
 {% extends '_base.html' %}
-{% load crispy_forms_tags %}
 
 {% block title %}Set Password{% endblock title %}
 
 {% block content %}
     <form method="POST" action="" class="password_set">
         {% csrf_token %}
-        {{ form | crispy }}
+        {{ form }}
         <div class="form-actions">
             <button class="btn btn-primary" type="submit" name="action" value="Set Password">Change
                 Password
