--- a/templates/companies/create_company.html
+++ b/templates/companies/create_company.html
@@ -1,5 +1,4 @@
 {% extends '_base.html' %}
-{% load crispy_forms_filters %}
 {% load static %}
 
 {% block title %}Create a Company{% endblock title %}
@@ -16,10 +15,10 @@
                 <form action="{% url 'create_company' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        {{ form.name | as_crispy_field }}
+                        {{ form.name }}
                     </div>
                     <div class="form-group">
-                        {{ form.url | as_crispy_field }}
+                        {{ form.url }}
                     </div>
                     <button type="submit" class="btn btn-primary">Create</button>
                 </form>
