--- a/templates/companies/edit_profile.html
+++ b/templates/companies/edit_profile.html
@@ -1,5 +1,4 @@
 {% extends '_base.html' %}
-{% load crispy_forms_filters %}
 {% load static %}
 
 {% block title %}Editing Profile{% endblock title %}
@@ -21,19 +20,19 @@
                         <form action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
                             <div class="form-group">
-                                {{ form.profile_picture | as_crispy_field }}
+                                {{ form.profile_picture }}
                             </div>
                             <div class="form-group">
-                                {{ form.title | as_crispy_field }}
+                                {{ form.title }}
                             </div>
                             <div class="form-group">
-                                {{ form.general_location | as_crispy_field }}
+                                {{ form.general_location }}
                             </div>
                             <div class="form-group">
-                                {{ form.team | as_crispy_field }}
+                                {{ form.team }}
                             </div>
                             <div class="form-group">
-                                {{ form.short_bio | as_crispy_field }}
+                                {{ form.short_bio }}
                             </div>
                             <button type="submit" class="btn btn-primary">Save</button>
                         </form>
